# docs/swagger.json
@@ -8,11 +8,39 @@
         "contact": {
             "name": "Pawat Nakpiphatkul",
             "url": "https://github.com/guitarpawat/worthly-tracker/issues"
-        }
+        },
+        "version": "0.1"
     },
     "host": "localhost:8080",
     "paths": {
         "/api/records/": {
+            "get": {
+                "description": "Get records by specified date or latest available if no date supplied",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "record"
+                ],
+                "summary": "Get records by date",
+                "responses": {
+                    "200": {
+                        "description": "Success to retrieve records",
+                        "schema": {
+                            "$ref": "#/definitions/router.getRecordByDateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Input validation failed"
+                    },
+                    "404": {
+                        "description": "No any records found"
+                    },
+                    "500": {
+                        "description": "Generic server error"
+                    }
+                }
+            },
             "post": {
                 "consumes": [
                     "application/json"
@@ -23,10 +51,10 @@
                 "tags": [
                     "record"
                 ],
-                "summary": "Add or edit record at specified date",
+                "summary": "Add or edit record of specified date",
                 "parameters": [
                     {
-                        "description": "See field descriptions for more details",
+                        "description": "Records to be added or modified",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -50,7 +78,7 @@
         },
         "/api/records/draft": {
             "get": {
-                "description": "Filter only @DB: asset_types.isActive = true and @DB: assets.isActive = true as @DTO: AssetRecord\nThen prefill  @DTO: AssetRecord with the data from the latest @DB: records, null if there is no data of the asset found.",
+                "description": "Get new draft by filter only active assets and assetTypes.\nThen prefill the data from the latest records, null if there is no data from the latest record",
                 "produces": [
                     "application/json"
                 ],
@@ -64,6 +92,84 @@
                         "schema": {
                             "$ref": "#/definitions/model.AssetTypeRecord"
                         }
+                    },
+                    "500": {
+                        "description": "Generic server error"
+                    }
+                }
+            }
+        },
+        "/api/records/offset/{date}": {
+            "get": {
+                "description": "Get asset offset prices for every asset in the record.\nFor every asset, get only the latest record before or on the specified date",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "record"
+                ],
+                "summary": "Get offset price for specified date",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "description": "Specified date for query in YYYY-MM-DD format",
+                        "name": "date",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success to retrieve records",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.OffsetDetail"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Input validation failed"
+                    },
+                    "500": {
+                        "description": "Generic server error"
+                    }
+                }
+            }
+        },
+        "/api/records/{date}": {
+            "get": {
+                "description": "Get records by specified date or latest available if no date supplied",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "record"
+                ],
+                "summary": "Get records by date",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "date",
+                        "default": "",
+                        "description": "Specified date for query in YYYY-MM-DD format",
+                        "name": "date",
+                        "in": "path"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success to retrieve records",
+                        "schema": {
+                            "$ref": "#/definitions/router.getRecordByDateResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Input validation failed"
+                    },
+                    "404": {
+                        "description": "No any records found"
                     },
                     "500": {
                         "description": "Generic server error"
@@ -138,6 +244,77 @@
                 "name": {
                     "type": "string",
                     "example": "Mutual Funds"
+                }
+            }
+        },
+        "model.DateList": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "description": "Selected date",
+                    "type": "string",
+                    "format": "date"
+                },
+                "next": {
+                    "description": "Next 12 days from selected date",
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "date"
+                    }
+                },
+                "prev": {
+                    "description": "Prev 12 days from selected date",
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "date"
+                    }
+                }
+            }
+        },
+        "model.OffsetDetail": {
+            "type": "object",
+            "properties": {
+                "assetId": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "effectiveDate": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "note": {
+                    "type": "string",
+                    "example": "Something worth mention"
+                },
+                "offsetPrice": {
+                    "type": "string",
+                    "example": "-500.00"
+                }
+            }
+        },
+        "router.getRecordByDateResponse": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "description": "Date provides requested date, and 12 record date to and from requested date",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.DateList"
+                        }
+                    ]
+                },
+                "types": {
+                    "description": "Types contains asset records group by asset types",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.AssetTypeRecord"
+                    }
                 }
             }
         },
